--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
             android:foregroundServiceType="dataSync"
             android:permission="android.permission.FOREGROUND_SERVICE"
             tools:ignore="ForegroundServicePermission" />
+        <receiver android:name=".presentation.receivers.NotificationDismissedReceiver" />
 
         <receiver
             android:name=".presentation.receivers.SmsReceiverBroadcast"
@@ -53,6 +54,7 @@
                 <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
                 <action android:name="android.intent.action.SCREEN_ON" />
                 <action android:name="android.intent.action.SCREEN_OFF" />
+                <action android:name="uz.gita.broadcast.CUSTOM_RECEIVER" />
             </intent-filter>
         </receiver>
     </application>
