--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,12 @@
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
+        <receiver android:name=".presentation.receivers.CustomReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="uz.gita.broadcast.CUSTOM_RECEIVER"/>
+            </intent-filter>
+        </receiver>
         <receiver
             android:name=".presentation.receivers.ContextRegisteredReceiver"
             android:exported="true">
@@ -54,7 +60,6 @@
                 <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
                 <action android:name="android.intent.action.SCREEN_ON" />
                 <action android:name="android.intent.action.SCREEN_OFF" />
-                <action android:name="uz.gita.broadcast.CUSTOM_RECEIVER" />
             </intent-filter>
         </receiver>
     </application>
